1、修改hibernate中的配置，设置启动时自动创建数据库表 2、新增readme说明（项目启动步骤） 3、新增加.gitignore配置

--- a/dao/src/main/resources/hibernate.properties
+++ b/dao/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.hbm2ddl.auto = none
+hibernate.hbm2ddl.auto = update
 hibernate.show_sql = true
 hiberante.format_sql = true
 ### cache config
