实体属性驼峰命名配置

--- a/dao/src/main/resources/hibernate.properties
+++ b/dao/src/main/resources/hibernate.properties
@@ -2,7 +2,7 @@ hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto = update
 hibernate.show_sql = true
 hiberante.format_sql = true
-#hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+##hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 ### cache config
 hibernate.cache.use_query_cache = true
 hibernate.cache.use_second_level_cache = true
