--- a/commons/src/main/resources/config.properties
+++ b/commons/src/main/resources/config.properties
@@ -7,3 +7,18 @@ root.path=user.dir
 # option is: root.path/directory absolute path
 #       default value is root.path
 upload.path=root.path
+
+# set add to GlobalConfig is properties file names
+config.properties=
+
+# set custom freemarker tag scan package
+freemarker.tag.base.package=com
+
+# set jpa scan package
+jpa.base.packages=com.**.domain
+
+# set hibernate scan package
+hibernate.base.packages=com.**.domain
+
+# set myBatis mapper file scan package
+mybatis.base.package=com.**.mapper
