--- a/dao/src/main/resources/hibernate.properties
+++ b/dao/src/main/resources/hibernate.properties
@@ -4,6 +4,6 @@ hibernate.show_sql = true
 hiberante.format_sql = true
 ##hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 ### cache config
-hibernate.cache.use_query_cache = true
-hibernate.cache.use_second_level_cache = true
-hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+#hibernate.cache.use_query_cache = true
+#hibernate.cache.use_second_level_cache = true
+#hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
