--- a/extjs/pom.xml
+++ b/extjs/pom.xml
@@ -4,16 +4,16 @@
 	<parent>
 		<groupId>com.stone</groupId>
 		<artifactId>platform</artifactId>
-		<version>1.0.0</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>extjs</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.0</version>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.stone</groupId>
 			<artifactId>commons</artifactId>
-			<version>1.0.1</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
