--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>commons</artifactId>
+	<artifactId>stone-commons</artifactId>
 	<version>${commons.version}</version>
 	
 	<dependencies>
