--- a/config/pom.xml
+++ b/config/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>config</artifactId>
+	<artifactId>stone-config</artifactId>
 	<version>${config.version}</version>
 	
 	<dependencies>
