--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>dao</artifactId>
+	<artifactId>stone-dao</artifactId>
 	<version>${dao.version}</version>
 	
 	<properties>
