--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>demo</artifactId>
+	<artifactId>stone-demo</artifactId>
 	<version>1.0.0</version>
 	
 	<dependencies>
