--- a/baseinfo/pom.xml
+++ b/baseinfo/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>stone-baseinfo</artifactId>
+	<artifactId>baseinfo</artifactId>
 	
 	<dependencies>
 		<dependency>
@@ -15,4 +15,8 @@
 			<version>${config.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>stone-${project.artifactId}-${project.version}</finalName>
+	</build>
 </project>
