--- a/config/pom.xml
+++ b/config/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>stone-config</artifactId>
+	<artifactId>config</artifactId>
 	<version>${config.version}</version>
 	
 	<dependencies>
@@ -26,4 +26,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>stone-${project.artifactId}-${project.version}</finalName>
+	</build>
 </project>
