--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>stone-dao</artifactId>
+	<artifactId>dao</artifactId>
 	<version>${dao.version}</version>
 	
 	<properties>
@@ -107,4 +107,8 @@
 			<version>${config.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>stone-${project.artifactId}-${project.version}</finalName>
+	</build>
 </project>
