--- a/jetty/pom.xml
+++ b/jetty/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>stone-jetty</artifactId>
+	<artifactId>jetty</artifactId>
 	<version>${jetty.version}</version>
 	
 	<properties>
@@ -57,4 +57,8 @@
 			<version>${jetty-version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>stone-${project.artifactId}-${project.version}</finalName>
+	</build>
 </project>
