--- a/baseinfo/pom.xml
+++ b/baseinfo/pom.xml
@@ -6,17 +6,13 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>baseinfo</artifactId>
+	<artifactId>stone-baseinfo</artifactId>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.stone</groupId>
-			<artifactId>config</artifactId>
+			<artifactId>stone-config</artifactId>
 			<version>${config.version}</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<finalName>stone-${project.artifactId}-${project.version}</finalName>
-	</build>
 </project>
