--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>dao</artifactId>
+	<artifactId>stone-dao</artifactId>
 	<version>${dao.version}</version>
 	
 	<properties>
@@ -98,17 +98,13 @@
 	    </dependency>
 		<dependency>
 			<groupId>com.stone</groupId>
-			<artifactId>commons</artifactId>
+			<artifactId>stone-commons</artifactId>
 			<version>${commons.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.stone</groupId>
-			<artifactId>config</artifactId>
+			<artifactId>stone-config</artifactId>
 			<version>${config.version}</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<finalName>stone-${project.artifactId}-${project.version}</finalName>
-	</build>
 </project>
