--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,23 +6,19 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>demo</artifactId>
+	<artifactId>stone-demo</artifactId>
 	<version>1.0.0</version>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.stone</groupId>
-			<artifactId>dao</artifactId>
+			<artifactId>stone-dao</artifactId>
 			<version>${dao.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.stone</groupId>
-			<artifactId>baseinfo</artifactId>
+			<artifactId>stone-baseinfo</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<finalName>stone-${project.artifactId}-${project.version}</finalName>
-	</build>
 </project>
