--- a/jetty/pom.xml
+++ b/jetty/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>platform</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>jetty</artifactId>
+	<artifactId>stone-jetty</artifactId>
 	<version>${jetty.version}</version>
 	
 	<properties>
@@ -57,8 +57,4 @@
 			<version>${jetty-version}</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<finalName>stone-${project.artifactId}-${project.version}</finalName>
-	</build>
 </project>
